# synapse

./: .env.example  .gitignore  MVP_STATUS.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml
.reviews/: 2025-12-13-synapse-review.md
src/synapse/: __init__.py  client.py
src/synapse/adapters/: __init__.py  base.py
src/synapse/adapters/go/: __init__.py  _scoping.py  adapter.py  ast_utils.py  local_scope.py  resolver.py  scanner.py  type_inferrer.py
src/synapse/adapters/java/: __init__.py  _scoping.py  adapter.py  ast_utils.py  local_scope.py  resolver.py  scanner.py  type_inferrer.py
src/synapse/adapters/php/: __init__.py  adapter.py  ast_utils.py  resolver.py  scanner.py
src/synapse/api/: __init__.py  app.py
src/synapse/cli/: __init__.py  _export_helpers.py  _tables.py  main.py
src/synapse/core/: __init__.py  config.py  models.py  serializer.py  validator.py
src/synapse/enrichers/: __init__.py  base.py  fiber.py  gin.py  go_router.py  laravel.py  registry.py  spring.py
src/synapse/graph/: __init__.py  connection.py  queries.py  schema.py  writer.py
src/synapse/services/: __init__.py  project_service.py  query_service.py  resolver_service.py  scanner_service.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/go_sample/: user.go
tests/fixtures/go_sample/models/: animal.go  service.go
tests/fixtures/java_sample/: Animal.java  Dog.java  User.java  UserService.java
tests/integration/: __init__.py  test_go_adapter.py
tests/property/: __init__.py  test_adapter_determinism.py  test_ambiguity_tracking.py  test_go_signature.py  test_graph_integrity.py  test_idempotency.py  test_java_signature_disambiguation.py  test_pagination.py  test_project_archive.py  test_project_uniqueness.py  test_roundtrip.py  test_roundtrip_language.py  test_type_hierarchy.py  test_type_inference.py  test_unknown_receiver.py  test_validator.py
tests/test_synapse/: conftest.py
tests/test_synapse/e2e/: __init__.py  test_cli.py
tests/test_synapse/fixtures/complex_go/: go.mod
tests/test_synapse/fixtures/complex_java/: pom.xml
tests/test_synapse/fixtures/go_web_sample/: fiber_app.go  gin_app.go  go.mod
tests/test_synapse/fixtures/go_web_sample/handlers/: fiber_handlers.go  gin_handlers.go
tests/test_synapse/fixtures/java_sample/: Cat.java  Speakable.java
tests/test_synapse/fixtures/php_sample/routes/: web.php
tests/test_synapse/integration/: test_go_enrichers.py  test_java_adapter.py  test_php_adapter.py
tests/test_synapse/property/: test_chained_calls.py  test_go_local_scope.py  test_ir_merge_language.py  test_language_type_preservation.py  test_pagination.py  test_resolution_determinism.py
tests/test_synapse/unit/: test_models.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_resolver_service.py  test_writer.py
(+15 files in other folders)
