
[project]
name = "synapse"
version = "0.1.0"
description = "Code topology modeling system based on Neo4j"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Xenosoft", email = "within.shell@gmail.com" }
]
keywords = ["neo4j", "code-analysis", "topology", "graph-database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "rich>=13.0.0",
]

[project.scripts]
synapse = "synapse.cli.main:app"

[project.urls]
Repository = "https://github.com/username/synapse"
Issues = "https://github.com/username/synapse/issues"

# ------------------------------------------------------------------
#  Build System
# ------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

# ------------------------------------------------------------------
#  Dependency Groups (PEP 735 / Modern Standard)
#  不再混淆于 project.optional-dependencies
#  适用工具: uv, pdm, 以及未来的 pip
# ------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# 如果你需要特定的文档构建环境，可以单独列出
docs = [
    "mkdocs-material>=9.0.0",
]

# ------------------------------------------------------------------
#  Tools Configuration
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=synapse --cov-report=term-missing"
pythonpath = ["src"]  # 显式指定源码路径，防止导入错误

[tool.ruff]
line-length = 100
# target-version 默认会读取 project.requires-python，通常无需手动指定

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (自动升级旧语法)
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (交给 formatter 处理)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# 针对某些可能没有类型提示的第三方库忽略错误
module = ["tree_sitter.*", "neo4j.*"]
ignore_missing_imports = true
